card align added, toast design fix

--- a/src/components/Toast/Toast.module.scss
+++ b/src/components/Toast/Toast.module.scss
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: space-between;
   gap: var(--space-3);
 
   opacity: 0;
